--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <base href="%PUBLIC_URL%/" />
-    <title>Typing</title>
+    <title>Minimalist Typer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
